--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,31 @@
-/target/
-*target*
-*.jar
-*.war
-*.ear
 *.class
-
-# eclipse specific git ignore
-*.pydevproject
-.project
-.metadata
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
+.settings
 .classpath
-.settings/
-.loadpath
+git.properties
 
+# ide
+*.iml
+.idea
+.vscode
+.project
 
-# External tool builders
-.externalToolBuilders/
+# log
+*.log
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# node_modules
+node_modules/
+bower_components/
+.npm
 
+# build
+target/
+# dist/
+
+# other
+.svn
+.DS_Store
+
+#resource
+global/
+database/
+mapper/
